--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="assets/logoweb2.png">
   </head>
   <body>
     <nav>
@@ -71,7 +72,7 @@
           <h5>Mie Ayam dengan toping Bakso,Ayam, Pangsit, Jamur, dan Sayur pelengkap</h5>
         </div>
       </div>
-      <a href="">Menu And Order</a>
+      <a href="menu.html">Menu And Order</a>
     </section>
     <figure>
       <div class="title-figure">
