--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <title>Menu Rumah Makan Pak Dedy</title>
     <link rel="stylesheet" href="css/menu.css" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link rel="icon" href="assets/logoweb2.png">
   </head>
   <body>
     <nav>
