--- a/purchase.html
+++ b/purchase.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/purchase.css" />
         <!-- Boxicons -->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <link rel="icon" href="assets/logoweb2.png">
   </head>
   <body>
     <nav>
@@ -43,7 +44,7 @@
               <option selected disabled value="">Pilih Minuman</option>
               <option>Es Temulawak</option>
               <option>Es Jeruk</option>
-              <option>Es</option>
+              <option>Es Teh</option>
           </select>
           </div>
           <div class="form height">
@@ -61,7 +62,7 @@
           </div>
           <div class="form">
             <span>Jumlah Makanan Dan Minuman</span>
-            <input type="text" name="berapa" required placeholder="Berapa"/>
+            <input type="text" name="berapa" required placeholder="Mie Ayam 5 dan Es Teh 10"/>
           </div>
           <div class="form">
             <span>Waktu</span>
